--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,5 +1,5 @@
 * xref:index.adoc[Introduction]
-** xref:quickguide/quickguide.adoc[Quick up and Running Guide]
+** xref:quickguide/quickguide.adoc[Quick Guide]
 * ownCloud Infinite Scale 
 ** xref:architecture/architecture.adoc[Architecture and Concepts]
 ** xref:availability_scaling/availability_scaling.adoc[Availability and Scalability]
