--- a/modules/ROOT/pages/deployment/extensions/extensions.adoc
+++ b/modules/ROOT/pages/deployment/extensions/extensions.adoc
@@ -3,7 +3,7 @@
 
 :description: Extensions are microservices and core components of oCIS. Each extension serves a particular task and can be configured independently. Extensions started with the runtime share the runtime management while extensions running outside the runtime are managed on their own but connect to each other when necessary.
 
-Note that extension are in development process and their service, the environment variables and configuration may change.
+Note that extensions are under development and their service, the environment variables and configuration may change.
 
 image::root/beta-badge-1.svg[width=200]
 
