--- a/modules/ROOT/pages/deployment/extensions/extensions.adoc
+++ b/modules/ROOT/pages/deployment/extensions/extensions.adoc
@@ -17,10 +17,10 @@ There are descriptions and configuration details for each extension available.
 
 [TIP]
 ====
-You may see in the tables describing the environment variables that there are two environment variables in the same row configuring the same duty. In case, the following rule applies:
+You may see in the tables describing the environment variables that there are two environment variables in the same row configuring the same task. In such a case, the following rule applies:
 
-* The first environment variable is used on a global scope. If set, it will be used in all extension where applicable.
-* The second environment variable overwrites the first one, but ONLY for the particular extension.
+* The first environment variable is used on a global scale. If set, it will be used in all extension where applicable.
+* The second environment variable overwrites the first one, but ONLY for the one particular extension.
 
-Taking the `webdav` extension as example, you want to set the `OCIS_URL` as generic value, but for webdav, you want to use a different URL defined with `OCIS_PUBLIC_URL`.
+Taking the `webdav` extension as an example, you want to set the `OCIS_URL` as a generic value, but for webdav, you want to use a different URL defined with `OCIS_PUBLIC_URL`.
 ====
