--- a/modules/ROOT/pages/deployment/extensions/extensions.adoc
+++ b/modules/ROOT/pages/deployment/extensions/extensions.adoc
@@ -19,7 +19,7 @@ There are descriptions and configuration details for each extension available.
 ====
 You may see in the tables describing the environment variables that there are two environment variables in the same row configuring the same task. In such a case, the following rule applies:
 
-* The first environment variable is used on a global scale. If set, it will be used in all extension where applicable.
+* The first environment variable is used on a global scale. If set, it will be used in all extensions where applicable.
 * The second environment variable overwrites the first one, but ONLY for the one particular extension.
 
 Taking the `webdav` extension as an example, you want to set the `OCIS_URL` as a generic value, but for webdav, you want to use a different URL defined with `OCIS_PUBLIC_URL`.
