--- a/modules/ROOT/pages/deployment/extensions/audit.adoc
+++ b/modules/ROOT/pages/deployment/extensions/audit.adoc
@@ -1,83 +1,25 @@
-= Audit Service Configuration
+= Audit Extension Configuration
 :toc: right
 
-// harvested from https://owncloud.dev/extensions/audit/configuration/
-// fixme: some descriptions still missing
-// pre-beta1 2022-04-14
-
 :description: The audit service allows for easy monitoring of your oCIS server.
-
-// fixme: more to be added when we can actually see it.
 
 == Introduction
 
 {description}
 
+// fixme: source description is still missing, and a better description is needed
+
 == Configuration
 
-The audit service is configured via the following environment variables:
+=== Environment Variables
 
+The `audit` extension is configured via the following environment variables:
 
-[cols="30%,15%,15%,40%",options="header",]
-|===
-| Name
-| Type
-| Default
-| Description
+include::partial$extension_tables/audit_configvars.adoc[]
 
-| AUDIT_DEBUG_ADDR
-| string
-|
-|
+=== YAML Example
 
-| AUDIT_DEBUG_TOKEN
-| string
-|
-|
-
-| AUDIT_DEBUG_PPROF
-| bool
-| false
-|
-
-| AUDIT_DEBUG_ZPAGES
-| bool
-| false
-|
-
-| AUDIT_EVENTS_ENDPOINT
-| string
-| 127.0.0.1:9233
-| address of the streaming service
-
-| AUDIT_EVENTS_CLUSTER
-| string
-| ocis-cluster
-| clusterID of the streaming service, mandatory when using nats
-
-| AUDIT_EVENTS_GROUP
-| string
-| audit
-| customer group of the service, one group will only get one copy of an event
-
-| AUDIT_LOG_TO_CONSOLE
-| bool
-| true
-| logs to stdout if true
-
-| AUDIT_LOG_TO_FILE
-| bool
-| false
-| logs to file if true
-
-| AUDIT_FILEPATH
-| string
-|
-| path to the log file, mandatory if AUDIT_LOG_TO_FILE=true
-
-| AUDIT_FORMAT
-| string
-| json
-| log format, using json is advised
-|===
-
+[source,yaml]
+----
+include::{ocis-ext-includes}audit-config-example.yaml[]
+----
