Add auth extensions

--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -14,6 +14,9 @@
 *** xref:deployment/extensions/extensions.adoc[Extensions]
 **** xref:deployment/extensions/appprovider.adoc[App Provider]
 **** xref:deployment/extensions/audit.adoc[Audit]
+**** xref:deployment/extensions/auth-basic.adoc[Auth Basic]
+**** xref:deployment/extensions/auth-bearer.adoc[Auth Bearer]
+**** xref:deployment/extensions/auth-machine.adoc[Auth Machine]
 **** xref:deployment/extensions/webdav.adoc[WebDAV]
 *** xref:deployment/configuration/index.adoc[Configuration]
 **** xref:deployment/configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
