more extensions added

--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -18,6 +18,12 @@
 **** xref:deployment/extensions/auth-bearer.adoc[Auth Bearer]
 **** xref:deployment/extensions/auth-machine.adoc[Auth Machine]
 **** xref:deployment/extensions/frontend.adoc[Frontend]
+**** xref:deployment/extensions/gateway.adoc[Gateway]
+**** xref:deployment/extensions/graph-explorer.adoc[Graph Explorer]
+**** xref:deployment/extensions/graph.adoc[Graph]
+**** xref:deployment/extensions/group.adoc[Group]
+**** xref:deployment/extensions/idm.adoc[IDM]
+**** xref:deployment/extensions/nats.adoc[NATS]
 **** xref:deployment/extensions/webdav.adoc[WebDAV]
 *** xref:deployment/configuration/index.adoc[Configuration]
 **** xref:deployment/configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
