--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -24,6 +24,9 @@
 **** xref:deployment/extensions/group.adoc[Group]
 **** xref:deployment/extensions/idm.adoc[IDM]
 **** xref:deployment/extensions/nats.adoc[NATS]
+**** xref:deployment/extensions/notifications.adoc[Notification]
+**** xref:deployment/extensions/ocdav.adoc[OCDAV]
+**** xref:deployment/extensions/ocs.adoc[OCS]
 **** xref:deployment/extensions/webdav.adoc[WebDAV]
 *** xref:deployment/configuration/index.adoc[Configuration]
 **** xref:deployment/configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
