--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -306,9 +306,15 @@ WARNING: The location must exclusively be used by oCIS. Writing into this locati
 
 == Default Users and Groups
 
+Default users and groups are only created when you have started oCIS for the very first time, either via the runtime or if you start the xref:deployment/extensions/idm.adoc[IDM extension] outside the runtime. The same is true for demo users and groups which need an environment variable to be set _on first startup_ to get created.
+
+NOTE: If you have not declared demo user creation on first startup, you can for the time being only empty the xref:deployment/general/general-info.adoc#define-the-ocis-data-path[oCIS base directory] which resets the system. Then you can start from scratch and enable demo user creation.
+
+// fixme: the current implementation of the bootstrap creates the admin user and if set the demo users and adds them to the idm/boltdb file, see the idm extension. BUT if you have started ocis without demo user creation, you cant let ocis create them POST first start... https://github.com/owncloud/ocis/issues/3593 
+
 === Admin User
 
-When you have started oCIS for the first time, an admin user will be created with following credentials:
+An admin user will be created with following credentials:
 
 [caption=]
 .Admin user and group created on first ocis start
@@ -335,15 +341,10 @@ Login to the webinterface with this admin user and change relevant data accordin
 
 // https://owncloud.dev/ocis/getting-started/index
 // https://owncloud.dev/ocis/getting-started/demo-users/
-// fixme: with the new upcoming LibreIDE, things are changing - needs revision
 
 WARNING: You can let oCIS create demo users and groups for testing purposes. Because these demo users and groups can be a significant security issue, _you should remove them before going productive or your system is exposed to the outside world_.
 
 To let oCIS create these demo users and groups for you, start the _runtime_ once with:
-
-// fixme: the admin user is not part of the demo users but currently created by this process. when the new LibreIDM is in place, a new bootstrap process will be implemented checking for an admin user precense and creates one if not - but this is outside the demo user stuff ! - therefor we need to remove the admin user most likely here (and readd it "somewhere" else)... see: https://github.com/owncloud/ocis/pull/3507
-
-// fixme: as the LibreIDM is close to get implemented, the admin user is already take out from the demo set and is described above. 
 
 [source,bash]
 ----
