--- a/modules/ROOT/pages/deployment/extensions/frontend.adoc
+++ b/modules/ROOT/pages/deployment/extensions/frontend.adoc
@@ -1,6 +1,8 @@
 = Frontend Extension Configuration
 :toc: right
 
+:ext_name: frontend
+
 :description: The oCIS Frontend extension provides ...
 
 == Introduction
@@ -11,15 +13,4 @@
 
 == Configuration
 
-=== Environment Variables
-
-The `frontend` extension is configured via the following environment variables:
-
-include::partial$extension_tables/frontend_configvars.adoc[]
-
-=== YAML Example
-
-[source,yaml]
-----
-include::{ocis-ext-includes}frontend-config-example.yaml[]
-----
+include::partial$deployment/extensions/env-and-yaml.adoc[]
