--- a/modules/ROOT/pages/deployment/extensions/graph-explorer.adoc
+++ b/modules/ROOT/pages/deployment/extensions/graph-explorer.adoc
@@ -1,6 +1,8 @@
 = Graph Explorer Extension Configuration
 :toc: right
 
+:ext_name: graph-explorer
+
 :description: The oCIS Graph Explorer extension provides ...
 
 == Introduction
@@ -11,15 +13,4 @@
 
 == Configuration
 
-=== Environment Variables
-
-The `graph-explorer` extension is configured via the following environment variables:
-
-include::partial$extension_tables/graph-explorer_configvars.adoc[]
-
-=== YAML Example
-
-[source,yaml]
-----
-include::{ocis-ext-includes}graph-explorer-config-example.yaml[]
-----
+include::partial$deployment/extensions/env-and-yaml.adoc[]
