--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -28,6 +28,17 @@
 **** xref:deployment/extensions/ocdav.adoc[OCDAV]
 **** xref:deployment/extensions/ocs.adoc[OCS]
 **** xref:deployment/extensions/proxy.adoc[Proxy]
+**** xref:deployment/extensions/search.adoc[Search]
+**** xref:deployment/extensions/settings.adoc[Settings]
+**** xref:deployment/extensions/sharing.adoc[Sharing]
+**** xref:deployment/extensions/storage-publiclink.adoc[Storage-Publiclink]
+**** xref:deployment/extensions/storage-shares.adoc[Storage-Shares]
+**** xref:deployment/extensions/storage-system.adoc[Storage-System]
+**** xref:deployment/extensions/storage-users.adoc[Storage-Users]
+**** xref:deployment/extensions/store.adoc[Store]
+**** xref:deployment/extensions/thumbnails.adoc[Thumbnails]
+**** xref:deployment/extensions/user.adoc[User]
+**** xref:deployment/extensions/web.adoc[Web]
 **** xref:deployment/extensions/webdav.adoc[WebDAV]
 *** xref:deployment/configuration/index.adoc[Configuration]
 **** xref:deployment/configuration/ocis-config.adoc[Configuration of ownCloud Infinite Space]
