--- a/modules/ROOT/pages/deployment/extensions/app-provider.adoc
+++ b/modules/ROOT/pages/deployment/extensions/app-provider.adoc
@@ -1,6 +1,8 @@
 = App Provider Extension Configuration
 :toc: right
 
+:ext_name: app-provider
+
 :description: App providers represent apps, if the app is not able to register itself. Currently there is only the CS3org WOPI server app provider.
 
 == Introduction
@@ -12,15 +14,4 @@
 
 == Configuration
 
-=== Environment Variables
-
-The `app-provider` extension is configured via the following environment variables:
-
-include::partial$extension_tables/app-provider_configvars.adoc[]
-
-=== YAML Example
-
-[source,yaml]
-----
-include::{ocis-ext-includes}app-provider-config-example.yaml[]
-----
+include::partial$deployment/extensions/env-and-yaml.adoc[]
