--- a/modules/ROOT/pages/deployment/extensions/auth-machine.adoc
+++ b/modules/ROOT/pages/deployment/extensions/auth-machine.adoc
@@ -1,6 +1,8 @@
 = Auth Machine Extension Configuration
 :toc: right
 
+:ext_name: auth-machine
+
 :description: The oCIS Auth Machine extension provides ...
 
 == Introduction
@@ -11,15 +13,4 @@
 
 == Configuration
 
-=== Environment Variables
-
-The `auth-machine` extension is configured via the following environment variables:
-
-include::partial$extension_tables/auth-machine_configvars.adoc[]
-
-=== YAML Example
-
-[source,yaml]
-----
-include::{ocis-ext-includes}auth-machine-config-example.yaml[]
-----
+include::partial$deployment/extensions/env-and-yaml.adoc[]
