--- a/modules/ROOT/pages/deployment/extensions/nats.adoc
+++ b/modules/ROOT/pages/deployment/extensions/nats.adoc
@@ -1,6 +1,8 @@
 = NATS Extension Configuration
 :toc: right
 
+:ext_name: nats
+
 :description: The oCIS NATS extension provides ...
 
 == Introduction
@@ -11,15 +13,4 @@
 
 == Configuration
 
-=== Environment Variables
-
-The `nats` extension is configured via the following environment variables:
-
-include::partial$extension_tables/nats_configvars.adoc[]
-
-=== YAML Example
-
-[source,yaml]
-----
-include::{ocis-ext-includes}nats-config-example.yaml[]
-----
+include::partial$deployment/extensions/env-and-yaml.adoc[]
