--- a/modules/ROOT/pages/deployment/extensions/proxy.adoc
+++ b/modules/ROOT/pages/deployment/extensions/proxy.adoc
@@ -1,6 +1,8 @@
 = Proxy Extension Configuration
 :toc: right
 
+:ext_name: proxy
+
 :description: The oCIS Proxy extension provides a proxy service that routes requests to the correct extensions
 
 == Introduction
@@ -11,15 +13,4 @@
 
 == Configuration
 
-=== Environment Variables
-
-The `proxy` extension is configured via the following environment variables:
-
-include::partial$extension_tables/proxy_configvars.adoc[]
-
-=== YAML Example
-
-[source,yaml]
-----
-include::{ocis-ext-includes}proxy-config-example.yaml[]
-----
+include::partial$deployment/extensions/env-and-yaml.adoc[]
