--- a/modules/ROOT/pages/deployment/extensions/search.adoc
+++ b/modules/ROOT/pages/deployment/extensions/search.adoc
@@ -1,9 +1,9 @@
-= OCDAV Extension Configuration
+= Search Extension Configuration
 :toc: right
 
-:ext_name: ocdav
+:ext_name: search
 
-:description: The oCIS OCDAV extension provides ...
+:description: The oCIS Search extension provides a ...
 
 == Introduction
 
