--- a/modules/ROOT/pages/deployment/extensions/settings.adoc
+++ b/modules/ROOT/pages/deployment/extensions/settings.adoc
@@ -1,9 +1,9 @@
-= OCDAV Extension Configuration
+= Settings Extension Configuration
 :toc: right
 
-:ext_name: ocdav
+:ext_name: settings
 
-:description: The oCIS OCDAV extension provides ...
+:description: The oCIS Settings extension provides ...
 
 == Introduction
 
