--- a/modules/ROOT/pages/deployment/extensions/storage-shares.adoc
+++ b/modules/ROOT/pages/deployment/extensions/storage-shares.adoc
@@ -1,9 +1,9 @@
-= OCDAV Extension Configuration
+= Storage-Shares Extension Configuration
 :toc: right
 
-:ext_name: ocdav
+:ext_name: storage-shares
 
-:description: The oCIS OCDAV extension provides ...
+:description: The oCIS Storage-Shares extension provides ...
 
 == Introduction
 
