--- a/modules/ROOT/pages/deployment/extensions/storage-users.adoc
+++ b/modules/ROOT/pages/deployment/extensions/storage-users.adoc
@@ -1,9 +1,9 @@
-= OCDAV Extension Configuration
+= Storage-Users Extension Configuration
 :toc: right
 
-:ext_name: ocdav
+:ext_name: storage-users
 
-:description: The oCIS OCDAV extension provides ...
+:description: The oCIS Storage-Users extension provides ...
 
 == Introduction
 
