--- a/modules/ROOT/pages/deployment/extensions/store.adoc
+++ b/modules/ROOT/pages/deployment/extensions/store.adoc
@@ -1,9 +1,9 @@
-= OCDAV Extension Configuration
+= Store Extension Configuration
 :toc: right
 
-:ext_name: ocdav
+:ext_name: store
 
-:description: The oCIS OCDAV extension provides ...
+:description: The oCIS Store extension provides ...
 
 == Introduction
 
