--- a/modules/ROOT/pages/deployment/extensions/web.adoc
+++ b/modules/ROOT/pages/deployment/extensions/web.adoc
@@ -1,9 +1,9 @@
-= OCDAV Extension Configuration
+= Web Extension Configuration
 :toc: right
 
-:ext_name: ocdav
+:ext_name: web
 
-:description: The oCIS OCDAV extension provides ...
+:description: The oCIS Web extension provides ...
 
 == Introduction
 
