--- a/modules/ROOT/pages/deployment/extensions/app-provider.adoc
+++ b/modules/ROOT/pages/deployment/extensions/app-provider.adoc
@@ -12,6 +12,8 @@
 // fixme: source description is still missing, and a better description is needed
 // fixme: currently found at: https://owncloud.dev/extensions/storage/apps/#app-provider-capability
 
+include::partial$deployment/extensions/beta-statement.adoc[]
+
 == Configuration
 
 include::partial$deployment/extensions/env-and-yaml.adoc[]
