--- a/modules/ROOT/pages/deployment/extensions/idm.adoc
+++ b/modules/ROOT/pages/deployment/extensions/idm.adoc
@@ -9,6 +9,8 @@
 
 {description} The IDM Extension is based on https://github.com/libregraph/idm[LibreGraph Identity Management].
 
+include::partial$deployment/extensions/beta-statement.adoc[]
+
 NOTE: It is mainly targeted at small oCIS installations. For larger setups it is recommended to replace IDM with a “real” LDAP server or to switch to an external Identity Management Solution.
 
 NOTE: The IDM Extension is limited in its functionality. It only supports a subset of the LDAP operations (namely `BIND`, `SEARCH`, `ADD`, `MODIFY` and `DELETE`). Also IDM currently does not do any schema verification (e.g. structural vs. auxiliary object classes, require and option attributes, syntax checks, …). It is not meant as a general purpose LDAP server.
