--- a/modules/ROOT/pages/deployment/extensions/notifications.adoc
+++ b/modules/ROOT/pages/deployment/extensions/notifications.adoc
@@ -11,6 +11,8 @@
 
 // fixme: source description is still missing, and a better description is needed
 
+include::partial$deployment/extensions/beta-statement.adoc[]
+
 == Configuration
 
 include::partial$deployment/extensions/env-and-yaml.adoc[]
