improve the partial extension text

--- a/modules/ROOT/partials/deployment/extensions/beta-statement.adoc
+++ b/modules/ROOT/partials/deployment/extensions/beta-statement.adoc
@@ -1,1 +1,1 @@
-Note that extensions are under development because of the image:root/beta-badge-1.svg[role="",width=60] stage of oCIS. Their service, environment variables and configuration may change. Forgive us if there are mistakes or information is missing. Feel free to report issues and we'll take care of them as soon as possible on https://github.com/owncloud/docs-ocis/issues[github]. You want to fix them yourself? We'd appreciate that even more.
+NOTE: Extensions are under development because of the image:root/beta-badge-1.svg[role="",width=60] stage of oCIS. Their service, environment variables and configuration may change. Forgive us if there are mistakes or information is missing. Feel free to report issues and we'll take care of them as soon as possible on https://github.com/owncloud/docs-ocis/issues[github]. You want to fix them yourself? We'd appreciate that even more.
