--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,6 +1,6 @@
 * xref:index.adoc[Introduction]
 ** xref:quickguide/quickguide.adoc[Quick Guide]
-* ownCloud Infinite Scale 
+* Infinite Scale 
 ** xref:architecture/architecture.adoc[Architecture and Concepts]
 ** xref:availability_scaling/availability_scaling.adoc[Availability and Scalability]
 ** xref:prerequisites/prerequisites.adoc[Prerequisites]
